# ZeroClaw-Plugins-PythonSDK

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE-MIT  README.md  pyproject.toml
.claude/: mcp.json
.claude/agents/: pm.md
.claude/skills/pm/: SKILL.md
.claude/skills/pm-autoscope/: SKILL.md
.claude/skills/pm-cleanup/: SKILL.md
.claude/skills/pm-do/: SKILL.md
.claude/skills/pm-plan/: SKILL.md
.claude/skills/pm-status/: SKILL.md
.github/workflows/: ci.yml  publish.yml  test-publish.yml
.project/: INFRASTRUCTURE.md  PROJECT.md  SECURITY.md  config.yaml  index.yaml
examples/: echo_plugin.py  greeter_plugin.py  smart_greeter_plugin.py
src/zeroclaw_plugin_cli/: __init__.py
